<resources>
    <string name="app_name">Court Counter</string>
    <string name="three_points">+3 points</string>
    <string name="two_points">+2 points</string>
    <string name="free_throw">Free Throw</string>
    <string name="reset">Reset</string>
    <string name="team_a">Team A score</string>
    <string name="team_b">Team B score</string>
    <string name="zero">0</string>
    <string name="foul">Foul</string>
    <string name="foul_count">Foul count</string>
    <string name="statistics">Statistics</string>
    <string name="statistics_textview">Press the button for game statistics</string>
    <string name="action_settings">Settings</string>
    <string name="game">Basketball random play!</string>
    <string name="rules">Basketball rules</string>
    <string name="play">Play ball</string>
    <string name="winner">Winner</string>
</resources>
